tests/models/struct/named/i128/fail/max_length.stderr
error: Support condition is gt, ge, lt, le, alias, default and validate
 --> tests/models/struct/named/i128/fail/max_length.rs:5:5
  |
5 |     value: i128,
  |     ^^^^^
